Bug 600079 - Crash in [@ @0x0 | mozilla::gl::GLContext::MarkDestroyed() ] - r=vlad, a=joe